P4PADEV-1659 code review